Validações de cancelamento concluídas.